bug 707114 - inline JSLinearString::mark. r=wmccloskey